--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,3 @@
-version: '3.8'
-
-networks:
-  default:
-    external: true
-    name: postgres_db_network
-
 services:
   ofpnd-backend:
     container_name: ofpnd-backend
@@ -13,11 +6,11 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
-      DB_USER: postgres
-      DB_PASSWORD: postgres
-      DB_HOST: postgres_db
+      DB_USER: ${DB_USER:-postgres}
+      DB_PASSWORD: ${DB_PASSWORD:-postgres}
+      DB_HOST: ${DB_HOST:-postgres_db}
       DB_PORT: 5432
-      DB_NAME: ofpnd_dev
+      DB_NAME: ${DB_NAME:-ofpnd_dev}
       STAGE: ''
     ports:
       - "8003:8000"
